--- a/admin/package.json
+++ b/admin/package.json
@@ -8,8 +8,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/data-grid": "^4.0.0-alpha.37",
+    "@material-ui/icons": "^4.11.3",
+    "axios": "^0.27.2",
+    "firebase": "^8.7.1",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "react-router-dom": "^6.3.0",
+    "recharts": "^2.1.13"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
