--- a/Backend/.env
+++ b/Backend/.env
@@ -1,3 +1,5 @@
 MONGO_URL=mongodb+srv://dishu:Qwerty123456@mydatabase.kj3t57h.mongodb.net/?retryWrites=true&w=majority
 
-SECRET_KEY=itsmedevil
+SECRET_KEY=EmG5twaE1XHjUmlvLxSJYsiI
+KEY_ID=rzp_test_XmZRCQRG4zhL6B
+
