--- a/Backend/package.json
+++ b/Backend/package.json
@@ -17,6 +17,9 @@
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.6",
-    "nodemon": "^2.0.19"
+    "nodemon": "^2.0.19",
+    "razorpay": "^2.8.3",
+    "shortid": "^2.2.16",
+    "uniqid": "^5.4.0"
   }
 }
